--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -141,6 +141,40 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+/* Section style de la modal1 */
+
+.modal { 
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.7);
+}
+
+.modal-wrapper {
+	overflow: auto;
+	margin-top: 550px;
+	width: 630px;
+	height: 730px;
+	padding: 25px;
+	background-color: #fff;
+	border-radius: 10px;
+}
+
+.modal-text-style {
+	display: flex;
+	justify-content: center;
+	padding: 30px;
+	align-items: baseline;
+}
+
+.modal-text-style a {
+	text-decoration: none;
+	color: black;
+}
 
 .filter {
 	display: flex;
