--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -154,9 +154,24 @@ li:hover {
 	background: rgba(0, 0, 0, 0.7);
 }
 
+.js-close-modal {
+	background-color: white;
+	border: none;
+	float: right;
+}
+.fa-xmark {
+	width: 20px;
+	height: 20px;
+}
+
+#modal-title {
+	padding-top: 30px;
+	padding-bottom: 20px;
+}
 .modal-wrapper {
 	overflow: auto;
-	margin-top: 550px;
+	margin: auto;
+	margin-top: 350px;
 	width: 630px;
 	height: 730px;
 	padding: 25px;
@@ -176,6 +191,54 @@ li:hover {
 	color: black;
 }
 
+.modal-btn-add-photo {
+	display: flex;
+	margin: auto;
+	font-family: 'Syne';
+	font-weight: 700;
+	align-items: center;
+	font-size: 14px;
+	height: 36px;
+	padding-left: 50px;
+	padding-right: 50px;
+	border-radius: 60px;
+	margin-top: 45px;
+	border: solid 2px #1D6154;
+	color: white;
+	background-color: #1D6154;
+}
+
+.modal-delete-gallery {
+	display: flex;
+	margin: auto;
+	font-family: 'Syne';
+	font-weight: 700;
+	align-items: center;
+	font-size: 14px;
+	font-weight: 400;
+	margin-top: 10px;
+	background-color: #fff;
+	color:#D65353;
+	border: none;
+}
+
+.modal-gallery {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin-left: 80px;
+	margin-right: 80px;
+	gap: 7px;
+	padding-bottom: 60px;
+	border-bottom: 1px solid #b3b3b3;
+}
+
+.modal-gallery figure img {
+	width: 100%;
+	height: 110px;
+}
+
+
 .filter {
 	display: flex;
 	margin-bottom: 50px;
@@ -194,7 +257,7 @@ input[type="button"]{
 	padding-right: 20px;
 	height: 36px;
 	text-align: center;
-	border-radius: 60px ;
+	border-radius: 60px;
 	border: solid 2px #1D6154;
 }
 
@@ -202,6 +265,10 @@ input[type="button"]:focus {
 	color: white;
 	background-color: #1D6154;
 }
+
+
+
+
 
 .gallery {
 	width: 100%;
@@ -213,19 +280,21 @@ input[type="button"]:focus {
 
 .gallery img {
 	width: 100%;
-
 }
+
 #contact {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
+
 #contact > * {
 	text-align: center;
-
 }
+
 #contact h2{
 	margin-bottom: 20px;
 }
+
 #contact form {
 	text-align: left;
 	margin-top:30px;
@@ -239,9 +308,11 @@ margin: auto;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
+
 #contact label {
 	margin: 2em 0 1em 0;
 }
+
 #contact textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
