--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -202,6 +202,12 @@ li:hover {
 	border: none;
 	float: right;
 }
+
+.back {
+	background-color: #fff;
+	border: none;
+}
+
 .fa-xmark {
 	width: 20px;
 	height: 20px;
